[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "Mlflow tracking server"
authors = ["rama17aneesh <aneesh@gmail.com>"]
repository="https://github.com/rama17aneesh/mlflow-tracking-server.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "==2.16.2"
psycopg2-binary = "~=2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
